--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
 		}
 	],
 	"require": {
-		"php": ">=7.4.0",
+		"php": "^7.4 || ^8.0",
 		"nette/di": "^3.0",
 		"nette/mail": "^3.0",
 		"nette/utils": "^3.0",
 		"baraja-core/doctrine": "~2.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^0.12.18",
-		"tracy/tracy": "^2.7",
-		"phpstan/phpstan-nette": "^0.12.6",
+		"phpstan/phpstan": "^0.12.74",
+		"tracy/tracy": "^2.8",
+		"phpstan/phpstan-nette": "^0.12.14",
 		"roave/security-advisories": "dev-master"
 	},
 	"autoload": {
