--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,15 @@
 		"nette/di": "^3.0",
 		"nette/mail": "^3.0",
 		"nette/utils": "^3.0",
-		"baraja-core/doctrine": "~2.0"
+		"doctrine/orm": "^2.7",
+		"doctrine/dbal": "^2.9"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^0.12.74",
 		"tracy/tracy": "^2.8",
 		"phpstan/phpstan-nette": "^0.12.14",
-		"roave/security-advisories": "dev-master"
+		"roave/security-advisories": "dev-master",
+		"baraja-core/doctrine": "^3.0"
 	},
 	"autoload": {
 		"classmap": [
